--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,5 @@ jobs:
           echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
-          conda env update --file environment.yaml --name base
-      - name: pso mnist run
-        run: |
-          python mnist.py
+          conda env update --file environment.yaml --name pso
+          conda activate pso
