--- a/environment.yaml
+++ b/environment.yaml
@@ -10,8 +10,8 @@ dependencies:
   - pandas=1.5.3=py39h417a72b_0
   - pip=23.0.1=py39h06a4308_0
   - python=3.9.16=h7a1cb2a_2
+  - tqdm=4.65.0=py39hb070fc8_0
   - pip:
       - numpy==1.23.5
       - nvidia-cudnn-cu11==8.6.0.163
       - tensorflow==2.12.0
-      - tqdm==4.65.1.dev3+g5587f0d
