--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,11 @@
 {
 	"name": "Miniconda (Python 3)",
 	// Configure tool-specific properties.
+	"hostRequirements": {
+		"cpus": 16,
+		"memory": "64gb",
+		"storage": "128gb"
+	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -32,8 +37,7 @@
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": [
-		"conda env create --file environment.yaml --name pso",
-		"conda activate pso"
+		"conda env create --file environment.yaml --name pso"
 	]
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
