23-07-09 dev container 조정

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,9 @@
 				"donjayamanne.python-extension-pack",
 				"tht13.python",
 				"esbenp.prettier-vscode",
-				"ms-python.black-formatter"
+				"ms-python.black-formatter",
+				"github.vscode-github-actions",
+				"eamodio.gitlens"
 			]
 		}
 	},
