23-07-12 xor iris 수치 교정 파티클의 분포 조정 가능하게 수정 random 시드 추출

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@ __pycache__/
 
 .ipynb_checkpoints/
 
+# 테스트용 파일
+test.ipynb
+
 # 결과 저장용 디렉토리
 result/
 
 # 논문 관련 파일
 *.pdf
 *.pptx
-
 관련 논문/
 발표 자료/
