--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       max-parallel: 5
 
@@ -21,3 +21,5 @@ jobs:
       - name: Install dependencies
         run: |
           conda env create --file environment.yaml --name pso
+          conda activate pso
+          python mnist.py
