23-07-13 mnist 파티클 개수 75 -> 150 으로 조정 tensorboard 로 log 분석할 수 있게 수정 pypi 패키지 파일 제거 conda env 파일 tensorflow 2.12 -> 2.11

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,17 @@ __pycache__/
 
 .ipynb_checkpoints/
 
+# pypi
+dist/
+build/
+pso2keras.egg-info/
+
 # 테스트용 파일
 test.ipynb
 
 # 결과 저장용 디렉토리
 result/
+logs/
 
 # 논문 관련 파일
 *.pdf
