--- a/conda_env/environment.yaml
+++ b/conda_env/environment.yaml
@@ -1,17 +1,16 @@
 name: pso
 channels:
   - conda-forge
-  - nvidia/label/cuda-11.8.0
   - defaults
 dependencies:
-  - cuda-nvcc=11.8.89=0
-  - cudatoolkit=11.8.0=h6a678d5_0
-  - matplotlib=3.7.1=py39h06a4308_1
-  - pandas=1.5.3=py39h417a72b_0
-  - pip=23.0.1=py39h06a4308_0
-  - python=3.9.16=h7a1cb2a_2
-  - tqdm=4.65.0=py39hb070fc8_0
+  - cudatoolkit=11.2
+  - cudnn=8.1.0
+  - matplotlib=3.7.1
+  - pandas=1.5.3
+  - pip=23.0.1
+  - python=3.9.16
+  - tqdm=4.65.0
   - pip:
       - numpy==1.23.5
-      - nvidia-cudnn-cu11==8.6.0.163
-      - tensorflow==2.12.0
+      - tensorflow==2.11.0
+      - tensorboard==2.11.0
