23-07-17 tensorboard 적용된 pypi log 저장 디렉토리 지정해야 tensorboard 사용 가능 pypi 소스파일 제거 tqdm 자동으로 변경

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,6 +20,6 @@ jobs:
           echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
-          conda env create --file environment.yaml --name pso
+          conda env create --file conda_env/environment.yaml --name pso
           conda activate pso
           python mnist.py
