--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -23,5 +23,5 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
+          python setup.py bdist_wheel
+          twine upload dist/*.whl
