23-07-18 requirements 파일 수정

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1680185408135/work
+ipython
 keras==2.11.0
-matplotlib @ file:///croot/matplotlib-suite_1679593461707/work
-numpy @ file:///work/mkl/numpy_and_numpy_base_1682953417311/work
+numpy==1.25.0
 pandas==1.5.3
 tensorflow==2.11.1
-tqdm @ file:///croot/tqdm_1679561862951/work
+tqdm==4.65.0
