23-07-18 pypi 수정 2 release 파일 자동 생성

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -24,5 +24,5 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python setup.py bdist_wheel
-          twine upload dist/*.whl
+          python setup.py bdist_wheel sdist
+          twine upload dist/*.whl dist/*.tar.gz
