--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -4,8 +4,7 @@ on:
   push:
     paths:
       - "setup.py"
-    branches:
-      - main
+      - "pso/__init__.py"
 
 permissions:
   contents: read
@@ -28,12 +27,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install setuptools wheel twine
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        run: |
-          python setup.py bdist_wheel sdist
-          twine upload dist/*.whl dist/*.tar.gz
+          pip install build
+      - name: Build package
+        run: python -m build
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
