--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 ipython
-keras<=2.11.0
+keras
 numpy
-pandas==1.5.3
-tensorflow<=2.11.1
-tqdm==4.65.0
+pandas
+tensorflow
+tqdm
+scikit-learn
+tensorboard
