--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "sonarlint.connectedMode.project": {
+        "connectionId": "https-sonar-pieroot-xyz",
+        "projectKey": "pieroot_pso_6a2f36a9-2688-4900-a4a5-5be85f36f75a"
+    }
 }
