GitLab CI 설정 파일을 업데이트하고 SonarQube 체크 단계를 추가했습니다. VSCode 설정 파일에 YAML 스키마를 추가했습니다.

--- a/.gitlab/ci/sonarqube-check.gitlab-ci.yml
+++ b/.gitlab/ci/sonarqube-check.gitlab-ci.yml
@@ -1,5 +1,4 @@
-.sonarqube-check:
-  stage: sonarqube-check
+sonarqube-check:
   image:
     name: sonarsource/sonar-scanner-cli:5.0
     entrypoint: [""]
