--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "https-sonar-pieroot-xyz",
         "projectKey": "pieroot_pso_6a2f36a9-2688-4900-a4a5-5be85f36f75a"
+    },
+    "yaml.schemas": {
+        "https://gitlab.com/gitlab-org/gitlab/-/raw/master/app/assets/javascripts/editor/schema/ci.json": "file:///home/pieroot/jupyter/PSO/.gitlab/ci/sonarqube-check.gitlab-ci.yml"
     }
 }
