빌드 단계를 build에서 build-pypi로 변경

--- a/.gitlab/ci/build-pypi.gitlab-ci.yml
+++ b/.gitlab/ci/build-pypi.gitlab-ci.yml
@@ -2,8 +2,8 @@ variables:
   PYTHON_VERSION: "3.9"
   TWINE_USERNAME: "__token__"
 
-build-package:
-  stage: build
+build-pypi:
+  stage: build-pypi
   image: python:${PYTHON_VERSION}
   script:
     - pip install --upgrade pip
