pso2keras 버전을 1.0.5에서 1.0.5.1로 업데이트하고, TensorFlow GPU 메모리 성장을 설정하고, TF_CPP_MIN_LOG_LEVEL을 2로 설정했습니다.

--- a/.gitlab/ci/build-pypi.gitlab-ci.yml
+++ b/.gitlab/ci/build-pypi.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   PYTHON_VERSION: "3.9"
-  TWINE_USERNAME: "__token__"
+  TWINE_USERNAME: $PYPI_USERNAME
+  TWINE_PASSWORD: $PYPI_PASSWORD
 
 build-pypi:
   stage: build-pypi
