.gitlab-ci.yml에 test 스테이지를 추가하고, Jobs/Dependency-Scanning.gitlab-ci.yml 템플릿을 포함시켰습니다. .gitlab/dependabot.yml 파일을 삭제했습니다.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 stages:
   - sonarqube-check
+  - test
   - build-pypi
 
 include:
   - local: ".gitlab/ci/*.gitlab-ci.yml"
+
+  - template: Jobs/Dependency-Scanning.gitlab-ci.yml
