--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,9 @@
 	"name": "Miniconda (Python 3)",
 	// Configure tool-specific properties.
 	"hostRequirements": {
-		"cpus": 8,
-		"memory": "64gb",
-		"storage": "128gb"
+		"cpus": 4,
+		"memory": "16gb",
+		"storage": "32gb"
 	},
 	"customizations": {
 		"vscode": {
@@ -14,11 +14,8 @@
 				"ms-python.python",
 				"ms-toolsai.jupyter",
 				"donjayamanne.python-extension-pack",
-				"tht13.python",
-				"esbenp.prettier-vscode",
 				"ms-python.black-formatter",
-				"github.vscode-github-actions",
-				"eamodio.gitlens"
+				"github.vscode-github-actions"
 			]
 		}
 	},
@@ -27,12 +24,13 @@
 		"ghcr.io/devcontainers/features/nvidia-cuda:1": {
 			"installCudnn": true
 		},
-		"ghcr.io/devcontainers/features/anaconda:1": {
-			"version": "latest"
+		"ghcr.io/devcontainers/features/conda:1": {
+			"version": "latest",
+			"addCondaForge": true
 		},
 		"ghcr.io/devcontainers/features/python:1": {
 			"installTools": true,
-			"version": "3.9"
+			"version": "3.10"
 		}
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
