chore: 업데이트된 패키지 요구사항 반영
requirements.txt 파일에서 패키지 요구사항을 업데이트했습니다.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 ipython
-keras
 numpy
 pandas
-tensorflow
-tqdm
-scikit-learn
-tensorboard
+tensorflow==2.15.1
+tqdm==4.66.4
+scikit-learn==1.4.2
+tensorboard==2.15.1
